@@ -1,1 +1,1 @@
-Recursive reference to inline not in an element
+Detected a cycle in inline references
