@@ -1,2 +1,6 @@
-error detected at relaxng.c:6032
-The data does not cover the full element bad
+error detected at relaxng.c:6123
+Element bad has child elements
+error detected at relaxng.c:5917
+Expecting an element got 3 type
+error detected at relaxng.c:5970
+Extra content for element bad: text
