@@ -1,6 +1,6 @@
-error detected at relaxng.c:4817
+error detected at relaxng.c:4895
 Internal: failed to validate type float
-error detected at relaxng.c:6090
+error detected at relaxng.c:6261
 internal error validating list
-error detected at relaxng.c:5866
+error detected at relaxng.c:5970
 Extra content for element vector: text
