@@ -1,4 +1,4 @@
-error detected at relaxng.c:4999
-Internal: no state
-error detected at relaxng.c:6090
+error detected at relaxng.c:4901
+Type double doesn't allow value 
+error detected at relaxng.c:6261
 internal error validating list
