@@ -1,2 +1,2 @@
-error detected at relaxng.c:5866
+error detected at relaxng.c:5970
 Extra content for element head: base
